# tastyray

./: .gitignore  TastyRay.sln  buildAndRun
TastyRay/: CMakeLists.txt  SHBasis.h  TastyRay.vcxproj  TastyRay.vcxproj.filters  main.cpp
